chore: Let users see their own content
